--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 					<button>Book</button>
 				</div>
 			</section>
-			
 		</main>
+		<div class="chatbox-bg">
+			<img src="images/message.png" class="chatbox-img" alt="chatbox">
+
+		</div>
 	</body>
 </html>
